Toggle hidden class of sidebar on btn-burger click Re ordered z-index for sidebar and burger. Fixed the sidebar header font-size as it was scaling down.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4100,12 +4100,13 @@ a:hover.github img {
   font-size: 2em;
   top: -2px;
   left: -2px;
-  z-index: 1;
+  z-index: 2;
   position: fixed;
 }
 
 /* line 14, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
 .sidebar {
+  z-index: 1;
   border-right: 2px solid #87CEEB;
   margin: 0;
   padding: 0;
@@ -4115,26 +4116,27 @@ a:hover.github img {
   height: 100%;
 }
 
-/* line 22, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
+/* line 23, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
 .sidebar h1 {
+  font-size: 3.4em;
   transition: color 0.2s;
   color: #87CEEB;
   text-shadow: -1px -1px gray, 1px -1px #404040, -1px 1px #404040, 1px 1px black;
 }
 
-/* line 26, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
+/* line 28, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
 .sidebar h1:hover {
   color: #30aadc;
 }
 
-/* line 30, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
+/* line 32, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
 .sidebar .flex-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* line 34, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
+/* line 36, ../../Users/paulr/Desktop/Netmatters/Portfolio/scss/3.layout/_1.nav.scss */
 .sidebar .flex-container p {
   margin: 5px 0;
 }
